# RawToReady

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  start.sh
.claude/agents/: data-cleaning.md  data-scraper-engineer.md  table-extractor.md  validation-rules-writer.md
.claude/commands/: data_cleaning.md  scraper.md  table_extractor.md  workflow.md
api/: main.py
examples/: basic_pipeline.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DataPreview.svelte  EventLog.svelte  FileDropzone.svelte  FilesPanel.svelte
frontend/src/routes/: +page.svelte
src/: analyze_output.py  cleaning.py  interim.py  processed.py  report.py
src/dataflow_agents/: cli.py  config.py  graph.py  llm.py  prompts.py  runner.py  state.py  tools.py
src/dataflow_agents/nodes/: __init__.py  cleaner.py  extractor.py  scraper.py
src/ui/: cleaner.py  extractor.py  helpers.py  scraper.py  state.py  validator.py
tests/: test_pipeline.py
