[project]
name = "dataflow-agents"
version = "0.1.0"
description = "Multi-agent pipeline for scraping, extracting, cleaning, and validating structured data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "dataflow-agents contributors" }]
keywords = ["agents", "langgraph", "data-pipeline", "scraping", "extraction", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    # Web & HTTP
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "scrapy>=2.11.0",
    # Data
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # MCP client — Playwright MCP server integration
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
gemini = [
    "langchain-google-genai>=2.0.0",
]
openai = [
    "langchain-openai>=0.2.0",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
pdf-advanced = [
    "camelot-py[cv]>=0.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
dataflow = "dataflow_agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
